--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "store": "^1.3.17",
     "uglify-js": "^2.4.16"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^3.3.0"
+  },
   "browserify": {
     "transform": [
       "browserify-shim"
